src/test/deca/context/valid/SansObjet/DeclVar-LE-boolean-float-float.deca
// Description:
//    Declaration of a boolean variable using <= operation between a float variable and float .
// 
// Results:
//     nothing
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  10.01; 
    float y = 0.1; 
    boolean z = 10.01 <= 0.1; 
}
